cargo-features = ["profile-rustflags"]

[workspace]
resolver = "2"
members = [
  "crates/kiss",
  "crates/kiss-*",
]

[profile.release]
lto = "thin"
# panic = 'abort'

[profile.optimized]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
rustflags = ["-C", "target-feature=+crt-static"]

[profile.optimized_size]
inherits = "optimized"
opt-level = "z"
