[workspace]
resolver = "2"
members = [
  "crates/kiss",
  "crates/kiss-build",
  "crates/kiss-checksum",
  "crates/kiss-download",
  "crates/kiss-install",
  "crates/kiss-list",
  "crates/kiss-manifest",
  "crates/kiss-provides",
  "crates/kiss-search",
  "crates/kiss-update",
  "crates/kiss-upgrade",
]

[profile.release]
lto = "thin"
# panic = 'abort'

[profile.optimized]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3

[profile.optimized_size]
inherits = "optimized"
opt-level = "z"
