[package]
name = "kiss"
version = "0.1.0"
edition = "2021"
authors = ["XDream8 <WolfsDream@proton.me>"]
license = "MIT"
readme = "README.md"
repository = "https://codeberg.org/XDream8/kiss-rs"
description = "An implementation of kiss package manager in rust"

[dependencies]
seahorse = "2.1"
once_cell = "1.17.0"
rayon = { version = "1.7.0", optional = true }
blake3 = { version = "1.4.0", default-features = false }
faster-hex = { version = "0.8.0", default-features = false, features = [ "alloc" ] }
ureq = { version = "2.7.0", default-features = false, features = [ "tls" ] }
git2 = { version = "0.17.2", default-features = false, features = [ "https" ] }
tar = "0.4.38"
xz2 = { version = "0.1.7", optional = true }
zstd = { version = "0.12.4", features = [ "pkg-config" ], optional = true }
bzip2 = { version = "0.4.4", optional = true }
flate2 = { version = "1.0.26", optional = true }
lzzzz = { version = "1.0.4", optional = true }
nix = { version = "0.27.1", default-features = false, features = ["fs", "mount", "sched","signal", "user"] }

[features]
default = ["bzip2", "gzip", "xz2"]
all-compression = ["bzip2", "gzip", "zlib", "lz4", "xz2", "zstd"]
bzip2 = ["dep:bzip2"]
flate2 = ["dep:flate2", "ureq/gzip"]
gzip = ["flate2"]
zlib = ["flate2"]
lz4 = ["dep:lzzzz"]
xz2 = ["dep:xz2"]
zstd = ["dep:zstd"]

threading = ["dep:rayon"]

[profile.release]
lto = "thin"
panic = 'abort'

[profile.optimized]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3

[profile.optimized_size]
inherits = "optimized"
opt-level = "z"
