[package]
name = "kiss-api"
version = "0.1.0"
edition = "2021"
authors = ["XDream8 <WolfsDream@proton.me>"]
license = "MIT"
readme = "README.md"
repository = "https://codeberg.org/XDream8/kiss-rs"
description = "API for kiss-rs"

[lib]
bench = false

[dependencies]
nix = { version = "0.29.0", features = ["fs", "mount", "sched", "signal", "user"] }
thiserror = "1.0.63"
