[package]
name = "kiss-api"
version = "0.1.0"
edition = "2021"
authors = ["XDream8 <WolfsDream@proton.me>"]
license = "MIT"
readme = "README.md"
repository = "https://codeberg.org/XDream8/kiss-rs"
description = "API for kiss-rs"

[lib]
bench = false

[dependencies]
nix = { version = "0.29.0", features = [
  "fs",
  "mount",
  "sched",
  "signal",
  "user",
] }
blake3 = "1.5.4"
faster-hex = "0.10.0"
thiserror = "1.0.63"
once_cell = "1.20.2"
ureq = { version = "2.10.1", default-features = false, features = ["tls"] }
