[package]
name = "kiss-checksum"
version = "0.1.0"
edition = "2021"
authors = ["XDream8 <WolfsDream@proton.me>"]
license = "MIT"
readme = "README.md"
repository = "https://codeberg.org/XDream8/kiss-rs"
description = "generate checksums"

[lib]
name = "checksum_lib"
path = "src/lib.rs"

[dependencies]
shared_lib = { path = "../shared_lib" }
source_lib = { path = "../source_lib"}
kiss-search = { path = "../kiss-search" }
## cli
seahorse = "2.1"
## threading
rayon = { version = "1.7.0", optional = true }
## checksum
blake3 = { version = "1.4.0", default-features = false }
faster-hex = { version = "0.8.0", default-features = false, features = [ "alloc" ] }

[features]
threading = ["dep:rayon"]
