[package]
name = "kiss-download"
version = "0.1.0"
edition = "2021"
authors = ["XDream8 <WolfsDream@proton.me>"]
license = "MIT"
readme = "README.md"
repository = "https://codeberg.org/XDream8/kiss-rs"
description = "download sources"

[dependencies]
shared_lib = { path = "../shared_lib" }
source_lib = { path = "../source_lib" }
seahorse = "2.1"
libc = { version = "0.2.147", default-features = false }
rayon = { version = "1.7.0", optional = true }

[features]
threading = ["dep:rayon"]
