[package]
name = "kiss-install"
version = "0.1.0"
edition = "2021"
authors = ["XDream8 <WolfsDream@proton.me>"]
license = "MIT"
readme = "README.md"
repository = "https://codeberg.org/XDream8/kiss-rs"
description = "install package(s)"

[lib]
name = "install_lib"
path = "src/lib.rs"

[dependencies]
shared_lib = { path = "../shared_lib" }
source_lib = { path = "../source_lib" }
kiss-checksum = { path = "../kiss-checksum" }
kiss-manifest = { path = "../kiss-manifest" }
kiss-search = { path = "../kiss-search" }
## cli
seahorse = "2.1"
## threading
rayon = { version = "1.7.0", optional = true }
## signal handling and root privilege
libc = { version = "0.2.147", default-features = false }

[features]
threading = ["dep:rayon"]
