[package]
name = "kiss-manifest"
version = "0.1.0"
edition = "2021"
authors = ["XDream8 <WolfsDream@proton.me>"]
license = "MIT"
readme = "README.md"
repository = "https://codeberg.org/XDream8/kiss-rs"
description = "display all files owned by a package"


[dependencies]
shared_lib = { path = "../shared_lib" }
seahorse = "2.1"
rayon = { version = "1.7.0", optional = true }

[features]
threading = ["dep:rayon"]
