[package]
name = "kiss-update"
version = "0.1.0"
edition = "2021"
authors = ["XDream8 <WolfsDream@proton.me>"]
license = "MIT"
readme = "README.md"
repository = "https://codeberg.org/XDream8/kiss-rs"
description = "Update the repositories"

[dependencies]
shared_lib = { path = "../shared_lib" }
source_lib = { path = "../source_lib" }
seahorse = "2.1"
