[package]
name = "kiss"
version = "0.1.0"
edition = "2021"
authors = ["XDream8 <WolfsDream@proton.me>"]
license = "MIT"
readme = "README.md"
repository = "https://codeberg.org/XDream8/kiss-rs"
description = "An implementation of kiss package manager in rust"

[dependencies]
shared_lib = { path = "../shared_lib" }
## cli
seahorse = "2.1"
## lazy initizalize variables
once_cell = "1.17.0"
## signal handling and root privilege
libc = { version = "0.2.147", default-features = false }
