[package]
name = "kiss"
version = "0.1.0"
edition = "2021"
authors = ["XDream8 <WolfsDream@proton.me>"]
license = "MIT"
readme = "README.md"
repository = "https://codeberg.org/XDream8/kiss-rs"
description = "An implementation of kiss package manager in rust"

[dependencies]
## signal handling and root privilege
libc = { version = "0.2.147", default-features = false }
