[package]
name = "shared_lib"
version = "0.1.0"
edition = "2021"
authors = ["XDream8 <WolfsDream@proton.me>"]
license = "MIT"
readme = "README.md"
repository = "https://codeberg.org/XDream8/kiss-rs"
description = "Library that includes shared code for kiss-*"

[lib]
name = "shared_lib"
path = "src/lib.rs"

[dependencies]
seahorse = "2.1"
once_cell = "1.17.0"
rayon = { version = "1.7.0", optional = true }
libc = { version = "0.2.147", default-features = false }

[features]
threading = ["dep:rayon"]
