[package]
name = "source_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "source_lib"
path = "src/lib.rs"

[dependencies]
shared_lib = { path = "../shared_lib" }
kiss-search = { path = "../kiss-search" }
## lazy initizalized HTTP_CLIENT
once_cell = "1.17.0"
## threading
rayon = { version = "1.7.0", optional = true }
## downloads
ureq = { version = "2.7.0", default-features = false, features = [ "tls" ] }
## for managing git repositories
git2 = { version = "0.17.2", default-features = false, features = [ "https" ] }
## tar creation
tar = "0.4.38"
xz2 = { version = "0.1.7", optional = true }
zstd = { version = "0.12.4", features = [ "pkg-config" ], optional = true }
bzip2 = { version = "0.4.4", optional = true }
flate2 = { version = "1.0.26", optional = true }
lzzzz = { version = "1.0.4", optional = true }

[features]
default = ["bzip2", "gzip", "xz2"]
all-compression = ["bzip2", "gzip", "zlib", "lz4", "xz2", "zstd"]
bzip2 = ["dep:bzip2"]
# gzip and zlib compressions are provided by flate2 crate
flate2 = ["dep:flate2", "ureq/gzip"]
gzip = ["flate2"]
zlib = ["flate2"]
lz4 = ["dep:lzzzz"]
xz2 = ["dep:xz2"]
zstd = ["dep:zstd"]

# threading
threading = ["dep:rayon"]
